:construction: feat (refactor) Solved problem of test after refactor